8284016: Normalized names of classes derived from HandshakeClosure